
New Features

    - Nothing yet.


Jython 2.7.4a1 Bugs fixed
    - [ GH-269 ] Upgrade Google Guava to 32.0.1 (CVE-2023-2976)
    - [ GH-264 ] Create a security policy
    - [ GH-254 ] Regression in socket.socket.sendall for sending Unicode
    - [ GH-247 ] PySystemStateTest fails on Mac
    - [ GH-245 ] Document download/binaries location


==============================================================================
Jython 2.7.3
==============================================================================

New Features

    - The jython command respects the PYTHONDONTWRITEBYTECODE environment
      variable (GH-128).

    - Under PR GH-101, the matching of sequence arguments to the parameters of
      Java methods is improved (and in constructors under GH-201). A Java
      varargs parameter does not match a final sequence in the call if an array
      parameter could do so. (Thanks Peter Holloway.)

    - array.array itemsize of unsigned types is now the same as their signed
      counterparts, where previously it was mostly double. Internal
      representations have changed. Anomalies have been eliminated between
      itemsize and the serialisation (tostring() etc.) for unsigned types, and
      in the range of values accepted in different contexts. The size of type
      'u' (unicode character) is 4 on all platforms. Client code that was
      working around these anomalies may have to change. Overall, the
      experience should be closer to that with CPython.

    - We no longer aspire to compile Jython with Java 7. (We may use Java 8
      features.)

    - The project has moved its home to GitHub (twice), and invites issue
      reports there (not at bugs.jython.org).


Jython 2.7.3
    The release is the same as the rc1 (apart from the version number). 

Jython 2.7.3rc1 Bugs fixed
    - [ GH-201 ] Support vararg constructors

Jython 2.7.3b1 Bugs fixed
    - [ GH-192 ] PyString with non-byte value in formatting of collections