@@ -25,6 +25,7 @@ Jython 2.7.4a1 Bugs fixed
     - [ GH-254 ] Regression in socket.socket.sendall for sending Unicode
     - [ GH-247 ] PySystemStateTest fails on Mac
     - [ GH-245 ] Document download/binaries location
+    - [ GH-221 ] Incorrect method precedence with overloading and variable arity
 
 
 ==============================================================================
